<resources>
    <string name="app_name">Theta Finder</string>

    <string name="welcome">Input the x-y coordinates of a relative location
        (negative values work too): </string>
    <string name="x_coord_label">X</string>
    <string name="y_coord_label">Y</string>
    <string name="angle_label">Angle toward relative location: </string>

    <string name="default_result">(input coordinates first)</string>
    <string name="action_settings">Settings</string>
</resources>
